--- a/css/main.css
+++ b/css/main.css
@@ -1874,7 +1874,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #8edaff;
+  background: #8ca6ff;
 }
 .links-of-blogroll {
   font-size: 13px;
