--- a/css/main.css
+++ b/css/main.css
@@ -1892,7 +1892,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #88afb1;
+  background: #8eff0e;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -2741,6 +2741,7 @@ pre .javascript .function {
 @media (max-width: 767px) {
   .container .main-inner {
     width: auto;
+    background: #fff;
   }
 }
 .content-wrap {
@@ -2748,7 +2749,7 @@ pre .javascript .function {
   box-sizing: border-box;
   padding: 40px;
   width: calc(100% - 252px);
-  background: #fff;
+  background: none;
   min-height: 700px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.06), 0 1px 5px 0 rgba(0,0,0,0.12);
   border-radius: initial;
@@ -2766,6 +2767,7 @@ pre .javascript .function {
     padding: 20px;
     min-height: auto;
     border-radius: initial;
+    background: #fff;
   }
 }
 .sidebar {
@@ -3202,11 +3204,4 @@ pre .javascript .function {
   .pagination {
     margin: 8px 0 0;
   }
-}
-body {
-  background-image: url("/blog/images/road.jpg");
-  background-attachment: fixed;
-  background-repeat: repeat;
-  background-size: contain;
-  background-size: cover;
 }
