--- a/css/main.css
+++ b/css/main.css
@@ -1892,7 +1892,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #8eff0e;
+  background: #04e2ff;
 }
 .links-of-blogroll {
   font-size: 13px;
